Servis dosyası düzenlendi.

--- a/kodusorClient/kodusorClient/kodusorClient.csproj
+++ b/kodusorClient/kodusorClient/kodusorClient.csproj
@@ -48,6 +48,8 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -94,6 +96,16 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
+    <Content Include="Service References\kodusorServis\kodusorClient.kodusorServis.CompositeType.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Service References\kodusorServis\Service1.disco" />
+    <None Include="Service References\kodusorServis\configuration91.svcinfo" />
+    <None Include="Service References\kodusorServis\configuration.svcinfo" />
+    <None Include="Service References\kodusorServis\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -103,12 +115,32 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\kodusorServis\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="Views\Shared\_LayoutHome.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\KayitOl.cshtml" />
+    <None Include="Service References\kodusorServis\Service1.wsdl" />
+    <None Include="Service References\kodusorServis\Service1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\kodusorServis\Service11.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\kodusorServis\Service12.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\kodusorServis\Service13.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Views\Home\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -119,6 +151,12 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\kodusorServis\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
