--- a/kodusorServis/kodusorServis/Web.config
+++ b/kodusorServis/kodusorServis/Web.config
@@ -2,14 +2,14 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
   </system.web>
   <system.serviceModel>
     <behaviors>
@@ -36,13 +36,16 @@
     <directoryBrowse enabled="true" />
   </system.webServer>
   <connectionStrings>
-    <add name="kodusorEntities" connectionString="metadata=res://*/Model.KodusorModel.csdl|res://*/Model.KodusorModel.ssdl|res://*/Model.KodusorModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql5032.mywindowshosting.com;initial catalog=DB_A14A1C_kodusor;persist security info=True;user id=DB_A14A1C_kodusor_admin;password=asdf4321;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="kodusorDBEntities" connectionString="metadata=res://*/kodusorModel.csdl|res://*/kodusorModel.ssdl|res://*/kodusorModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=kodusor.com\MSSQLSERVER2012;initial catalog=kodusorDB;persist security info=True;user id=kodusoradmin;password=Vxs^t857;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v13.0" />
+        <parameter value="mssqllocaldb" />
       </parameters>
     </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
 </configuration>
