--- a/kodusorServis/kodusorServis/kodusorServis.csproj
+++ b/kodusorServis/kodusorServis/kodusorServis.csproj
@@ -7,15 +7,14 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9969C33A-395E-4170-8F96-AC7DE9BCB2F0}</ProjectGuid>
+    <ProjectGuid>{70D9014D-FDAC-409B-BB59-ECDB017869B1}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>kodusorService</RootNamespace>
-    <AssemblyName>kodusorService</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>kodusorServis</RootNamespace>
+    <AssemblyName>kodusorServis</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -41,13 +40,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -68,80 +70,81 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Model\KodusorModel.Context.tt">
+    <Content Include="kodusorModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>KodusorModel.edmx</DependentUpon>
-      <LastGenOutput>KodusorModel.Context.cs</LastGenOutput>
+      <DependentUpon>kodusorModel.edmx</DependentUpon>
+      <LastGenOutput>kodusorModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Model\KodusorModel.tt">
+    <Content Include="kodusorModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>KodusorModel.edmx</DependentUpon>
-      <LastGenOutput>KodusorModel.cs</LastGenOutput>
+      <DependentUpon>kodusorModel.edmx</DependentUpon>
+      <LastGenOutput>kodusorModel.cs</LastGenOutput>
     </Content>
     <Content Include="Service1.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Cevaplar.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
+    <Compile Include="Cevaplar.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\Etiketler.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
+    <Compile Include="Etiketler.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\IletisimBilgileri.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
+    <Compile Include="FavoriCevaplar.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\KodusorModel.Context.cs">
+    <Compile Include="FavoriSorular.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IletisimBilgileri.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="kodusorModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>KodusorModel.Context.tt</DependentUpon>
+      <DependentUpon>kodusorModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\KodusorModel.cs">
+    <Compile Include="kodusorModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>KodusorModel.tt</DependentUpon>
+      <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\KodusorModel.Designer.cs">
+    <Compile Include="kodusorModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>KodusorModel.edmx</DependentUpon>
+      <DependentUpon>kodusorModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Model\Kullanicilar.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\Sorular.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\sp_helpdiagrams_Result.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\sysdiagrams.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model\Yorum.cs">
-      <DependentUpon>KodusorModel.tt</DependentUpon>
+    <Compile Include="Kullanicilar.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Service1.svc.cs">
       <DependentUpon>Service1.svc</DependentUpon>
     </Compile>
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SoruEtiket.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Sorular.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Yorum.cs">
+      <DependentUpon>kodusorModel.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="Model\KodusorModel.edmx">
+    <EntityDeploy Include="kodusorModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>KodusorModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>kodusorModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Model\KodusorModel.edmx.diagram">
-      <DependentUpon>KodusorModel.edmx</DependentUpon>
+    <Content Include="kodusorModel.edmx.diagram">
+      <DependentUpon>kodusorModel.edmx</DependentUpon>
     </Content>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\kodusorServis.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -165,9 +168,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>50631</DevelopmentServerPort>
+          <DevelopmentServerPort>52121</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50631/</IISUrl>
+          <IISUrl>http://localhost:52121/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
