--- a/kodusorServis/kodusorServis/Web.config
+++ b/kodusorServis/kodusorServis/Web.config
@@ -36,7 +36,7 @@
     <directoryBrowse enabled="true" />
   </system.webServer>
   <connectionStrings>
-    <add name="kodusorDBEntities" connectionString="metadata=res://*/kodusorModel.csdl|res://*/kodusorModel.ssdl|res://*/kodusorModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=kodusor.com\MSSQLSERVER2012;initial catalog=kodusorDB;persist security info=True;user id=kodusoradmin;password=Vxs^t857;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="kodusorDBEntities" connectionString="metadata=res://*/Models.kodusorModel.csdl|res://*/Models.kodusorModel.ssdl|res://*/Models.kodusorModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=kodusor.com\MSSQLSERVER2012;initial catalog=kodusorDB;persist security info=True;user id=kodusoradmin;password=Vxs^t857;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
