--- a/kodusorServis/kodusorServis/kodusorServis.csproj
+++ b/kodusorServis/kodusorServis/kodusorServis.csproj
@@ -70,12 +70,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="kodusorModel.Context.tt">
+    <Content Include="Models\kodusorModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>kodusorModel.edmx</DependentUpon>
       <LastGenOutput>kodusorModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="kodusorModel.tt">
+    <Content Include="Models\kodusorModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>kodusorModel.edmx</DependentUpon>
       <LastGenOutput>kodusorModel.cs</LastGenOutput>
@@ -84,37 +84,37 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cevaplar.cs">
+    <Compile Include="Models\Cevaplar.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Etiketler.cs">
+    <Compile Include="Models\Etiketler.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="FavoriCevaplar.cs">
+    <Compile Include="Models\FavoriCevaplar.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="FavoriSorular.cs">
+    <Compile Include="Models\FavoriSorular.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="IletisimBilgileri.cs">
+    <Compile Include="Models\IletisimBilgileri.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="kodusorModel.Context.cs">
+    <Compile Include="Models\kodusorModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>kodusorModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="kodusorModel.cs">
+    <Compile Include="Models\kodusorModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="kodusorModel.Designer.cs">
+    <Compile Include="Models\kodusorModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>kodusorModel.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Kullanicilar.cs">
+    <Compile Include="Models\Kullanicilar.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Service1.svc.cs">
@@ -122,13 +122,13 @@
     </Compile>
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SoruEtiket.cs">
+    <Compile Include="Models\SoruEtiket.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Sorular.cs">
+    <Compile Include="Models\Sorular.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Yorum.cs">
+    <Compile Include="Models\Yorum.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -136,11 +136,11 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="kodusorModel.edmx">
+    <EntityDeploy Include="Models\kodusorModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>kodusorModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="kodusorModel.edmx.diagram">
+    <Content Include="Models\kodusorModel.edmx.diagram">
       <DependentUpon>kodusorModel.edmx</DependentUpon>
     </Content>
     <Content Include="packages.config" />
