Kullanıcı kayıt işlemi tamamlandı. Closed #2

--- a/kodusorClient/kodusorClient/Web.config
+++ b/kodusorClient/kodusorClient/Web.config
@@ -41,7 +41,15 @@
     </compilers>
   </system.codedom>
   <system.serviceModel>
-    <bindings />
-    <client />
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IKodusorServis" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://servis.kodusor.com/KodusorServis.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IKodusorServis"
+        contract="kodusorServis.IKodusorServis" name="BasicHttpBinding_IKodusorServis" />
+    </client>
   </system.serviceModel>
 </configuration>
