--- a/kodusorServis/kodusorServis/kodusorServis.csproj
+++ b/kodusorServis/kodusorServis/kodusorServis.csproj
@@ -80,7 +80,7 @@
       <DependentUpon>kodusorModel.edmx</DependentUpon>
       <LastGenOutput>kodusorModel.cs</LastGenOutput>
     </Content>
-    <Content Include="Service1.svc" />
+    <Content Include="KodusorServis.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -117,10 +117,10 @@
     <Compile Include="Models\Kullanicilar.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
+    <Compile Include="KodusorServis.svc.cs">
+      <DependentUpon>KodusorServis.svc</DependentUpon>
     </Compile>
-    <Compile Include="IService1.cs" />
+    <Compile Include="IKodusorServis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\SoruEtiket.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
