--- a/kodusorClient/kodusorClient/kodusorClient.csproj
+++ b/kodusorClient/kodusorClient/kodusorClient.csproj
@@ -91,11 +91,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\materialize.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
-    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
+    <Content Include="Scripts\materialize.min.js" />
     <Content Include="Service References\kodusorServis\kodusorClient.kodusorServis.kullaniciListesi.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
@@ -126,8 +126,6 @@
     <Content Include="packages.config" />
     <Content Include="Views\Shared\_LayoutHome.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\KayitOl.cshtml" />
-    <Content Include="Views\Home\Login.cshtml" />
     <None Include="Service References\kodusorServis\KodusorServis.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -150,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="fonts\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
