--- a/kodusorClient/kodusorClient/kodusorClient.csproj
+++ b/kodusorClient/kodusorClient/kodusorClient.csproj
@@ -142,6 +142,8 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\kodusorServis\Service1.wsdl" />
+    <Content Include="Views\Home\Soru.cshtml" />
+    <Content Include="Views\Home\Etiket.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
