Kullanıcı id'sine göre soru listeleme servisi yazıldı. #3

--- a/kodusorServis/kodusorServis/kodusorServis.csproj
+++ b/kodusorServis/kodusorServis/kodusorServis.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>KodusorServis.svc</DependentUpon>
     </Compile>
     <Compile Include="IKodusorServis.cs" />
+    <Compile Include="NesneDuzenle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\SoruEtiket.cs">
       <DependentUpon>kodusorModel.tt</DependentUpon>
