Servis ve soru görüntüleme sayfası düzenlendi. Arama fonksiyonu eklendi, kontrol edilecek.

--- a/kodusorClient/kodusorClient/kodusorClient.csproj
+++ b/kodusorClient/kodusorClient/kodusorClient.csproj
@@ -155,6 +155,7 @@
     <Content Include="Views\Home\Soru.cshtml" />
     <Content Include="Views\Profil\SoruSor.cshtml" />
     <Content Include="Views\Profil\Index.cshtml" />
+    <Content Include="Views\Home\SoruAra.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
